--- a/list/array_list/Makefile
+++ b/list/array_list/Makefile
@@ -20,3 +20,8 @@ fclean: clean
 	rm -rf $(TARGET)
 
 re: fclean all
+
+leak:
+	valgrind --leak-check=yes ./$(TARGET)
+
+.PHONY: all clean fclean re leak
