--- a/tree/.vscode/settings.json
+++ b/tree/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
 	"files.associations": {
 		"ft_tree.h": "c",
-		"stdio.h": "c"
+		"stdio.h": "c",
+		"time.h": "c",
+		"stdlib.h": "c",
+		"ft_heap.h": "c"
 	}
 }
