--- a/tree/balanced_tree/avl/2nd_avl_tree/Makefile
+++ b/tree/balanced_tree/avl/2nd_avl_tree/Makefile
@@ -2,8 +2,13 @@ CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 INC_FLAGS = -I $(INC_DIR)
 INC_DIR = ./includes/
-SRC_LIST = ft_main.c ft_crud_avl.c ft_print_utils.c ft_queue.c ft_search_utils.c \
-ft_delete_tree_node.c
+SRC_LIST = ft_main.c \
+ft_crud_avl.c \
+ft_print_utils.c \
+ft_queue.c \
+ft_search_utils.c \
+ft_delete_tree_node.c \
+ft_insertion_balancing_utils.c
 SRCS = $(addprefix ./srcs/, $(SRC_LIST))
 OBJS = $(SRCS:.c=.o)
 TARGET = avl
