avl tree balancing for insertion

--- a/tree/balanced_tree/avl/4th_avl_tree/Makefile
+++ b/tree/balanced_tree/avl/4th_avl_tree/Makefile
@@ -8,7 +8,9 @@ ft_print_utils.c \
 ft_search_tree_node_mode.c \
 ft_traversal_mode.c \
 ft_traversal_level_mode.c \
-ft_delete_tree_node_mode.c
+ft_delete_tree_node_mode.c \
+ft_balancing_tree.c \
+ft_rotate_tree.c
 SRCS = $(addprefix ./srcs/, $(SRC_LIST))
 OBJS = $(SRCS:.c=.o)
 TARGET = avl
