--- a/tree/balanced_tree/avl/4th_avl_tree/Makefile
+++ b/tree/balanced_tree/avl/4th_avl_tree/Makefile
@@ -10,7 +10,8 @@ ft_traversal_mode.c \
 ft_traversal_level_mode.c \
 ft_delete_tree_node_mode.c \
 ft_balancing_tree.c \
-ft_rotate_tree.c
+ft_rotate_tree.c \
+ft_rebalancing_tree.c
 SRCS = $(addprefix ./srcs/, $(SRC_LIST))
 OBJS = $(SRCS:.c=.o)
 TARGET = avl
